# r-perms

./: Cargo.toml  LICENSE  README.md
src/: json.json  main.rs
